Trying again to fix the features - not rendering correctly on iOS

--- a/app/assets/stylesheets/config/_utilities.scss
+++ b/app/assets/stylesheets/config/_utilities.scss
@@ -9,7 +9,7 @@
   padding: 70px;
   padding-left: 50px;
   padding-right: 50px;
-  text-align: justify;
+  // text-align: justify;
 
   @media only screen and (max-width: 500px) {
     padding-right: 20px;
