--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -92,6 +92,11 @@
       margin-right: 10px;
     }
 
+    _::-webkit-:not(:root:root), .img-container {
+      @media only screen and (max-width: 500px) {
+        margin-right: 10px;
+      }
+    }
   }
 
   // Safari-only hack (otherwise images are badly rendered)
